--- a/package.json
+++ b/package.json
@@ -88,10 +88,27 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-transition-group": "^4.4.1",
     "eslint": "^7.20.0",
+    "html-webpack-plugin": "^4.5.2",
     "husky": "^6.0.0",
     "jest-styled-components": "^7.0.3",
+    "path": "^0.12.7",
     "prettier": "^2.1.2",
     "source-map-explorer": "^2.5.2",
-    "ts-node": "^9.1.1"
-  }
+    "ts-node": "^9.1.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.1"
+  },
+  "description": "[![Netlify Status](https://api.netlify.com/api/v1/badges/7bebf1a3-be7b-4165-afd1-446256acd5e3/deploy-status)](https://app.netlify.com/sites/pancake-prod/deploys)",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EOSDOGEOFFICIAL/sexydex.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EOSDOGEOFFICIAL/sexydex/issues"
+  },
+  "homepage": "https://github.com/EOSDOGEOFFICIAL/sexydex#readme"
 }
