--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
+    "package.json": "^2.0.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
